# ticket-service

./: .env.example  .gitignore  Cargo.toml  README.md
.sqlx/: query-2be70d4653fe3734cb29e961a89dd7d258bfb79078b4f83b1eac9624a5651bd6.json  query-2c91053bbf38f46d68df93d040d0c4b5ca745f26141c9333b9d6555c9ac4b9f8.json  query-37ea261d87b82340d7e00c72dbfc153dfe25a718d2103f55d3912068d8bc743c.json  query-4a2c667f1723780c4dcfd15140c416155bddc2804b776f59828e79c08d74f8c5.json  query-7455dfe436986341a20ddd167644d3deefe37b8192015f02819c4de9b3762103.json  query-a6f8e38b7acf0c5b23e55c571a153581508cd6c2bedccc94cee1c7b5ce93bfe2.json  query-b9ff570e543ca0b559e72ce135e6903add12e71b37b0020c789c07cba39a14a7.json  query-c9e3ada87c7ca3b4910a5f4e8a2b11cd70ccab26768443a37d6cf6dc880c356a.json  query-ff59e0c4e37cd05b70972bde6ce1e7226297a1fbd21e6ee0707231c38f9f1947.json
api/: Cargo.toml
api/src/: docs.rs  main.rs
corelib/: Cargo.toml
corelib/src/: auth.rs  concert.rs  db.rs  lib.rs  order.rs  ticket.rs
migrations/: 20240401_init.sql
src/: main.rs
src/api/: mod.rs  routes.rs
src/api/docs/: mod.rs
src/api/handlers/: auth_handler.rs  concert_handler.rs  mod.rs  order_handler.rs  ticket_handler.rs
src/api/middleware/: auth.rs
src/application/: mod.rs
src/application/auth/: service.rs
src/application/concert/: service.rs
src/application/order/: service.rs
src/application/ticket/: service.rs
src/config/: mod.rs
src/domain/auth/: repository.rs
src/domain/auth/model/: mod.rs
src/domain/concert/: repository.rs
src/domain/concert/model/: mod.rs
src/domain/order/: repository.rs
src/domain/order/model/: mod.rs
src/domain/ticket/: repository.rs
src/domain/ticket/model/: mod.rs
src/infrastructure/: http.rs  mod.rs
src/infrastructure/database/: connection.rs
src/infrastructure/database/migrations/: 20240401_init.sql  20240402_add_users.sql
src/infrastructure/database/repositories/: concert_repository.rs  mod.rs  order_repository.rs  ticket_repository.rs  user_repository.rs
src/infrastructure/security/: password.rs
src/utils/: error.rs
