[package]
name = "ticket-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# 核心框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "limit", "cors"] }

# 數據庫
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono", "bigdecimal", "time"] }

# 序列化/反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 工具
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"

# 安全
argon2 = "0.5"
jsonwebtoken = "9"

# 文檔
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "5", features = ["axum"] }

# 日誌
tracing = "0.1"
tracing-subscriber = "0.3"