[package]
name = "corelib"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx.workspace = true
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
utoipa.workspace = true
dotenvy.workspace = true
